# Al-project

./: .dockerignore  .gitignore  Dockerfile  README.md  celery_worker.Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: celery_worker.py  main.py
app/api/: tasks.py
app/core/: config.py
app/database/: database.py
app/models/: task.py
app/schemas/: task.py
