[project]
name = "fastapi-celery-project"
version = "0.1.0"
description = "一个集成 Celery 进行异步任务处理的 FastAPI 应用程序"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "celery>=5.1.0",
    "redis>=3.5.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "pydantic-settings>=2.0.0",
]
